# Jcase

./: MIT-LICENSE.txt  README.md  Test.hs  jcase-schema.json  jsuite-schema.json  test-deps.cabal  test-jcase.json  test.json
spec/: jcase-schema.json  jsuite-schema.json
