name:                   jcase
version:                0
build-type:             Simple
cabal-version:          >=1.10

library
  default-language:     Haskell2010

test-suite test
  type:                 exitcode-stdio-1.0
  main-is:              Test.hs
  default-language:     Haskell2010
  ghc-options:          -Wall
  default-extensions:   OverloadedStrings
  build-depends:        aeson                >= 0.8  && < 0.9
                      , base                 >= 4.7  && < 4.8
                      , bytestring           >= 0.10 && < 0.11
                      , hjcase               >= 0.2  && < 0.3
                      , hjsonschema          >= 0.5  && < 0.6
                      , HUnit                >= 1.2  && < 1.3
                      , test-framework       >= 0.8  && < 0.9
                      , test-framework-hunit >= 0.3  && < 0.4
                      , text                 >= 1.2  && < 1.3
                      , unordered-containers >= 0.2  && < 0.3
                      , vector               >= 0.10 && < 0.11
